--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fontawesome": "^5.6.3",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-auth-kit": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-idle-timer": "^5.7.2",
     "react-router-dom": "^6.22.3",
